src/objects/BT_CO_VSS_ImportVendorSubscription__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crsmAccountId__c</fullName>
        <label>crsmAccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crsmContactId__c</fullName>
        <label>crsmContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crsmVendorSubscriptionId__c</fullName>
        <label>crsmVendorSubscriptionId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cssCustomerIdForRecipient__c</fullName>
        <label>cssCustomerIdForRecipient</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cssCustomerIdForSubscriber__c</fullName>
        <label>cssCustomerIdForSubscriber</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cssSubscriptionCode__c</fullName>
        <label>cssSubscriptionCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectiveDate__c</fullName>
        <label>effectiveDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hdsClassificationId__c</fullName>
        <label>hdsClassificationId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hdsComplimentaryTypeName__c</fullName>
        <label>hdsComplimentaryTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hdsContactId__c</fullName>
        <label>hdsContactId</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hdsRecipientId__c</fullName>
        <label>hdsRecipientId</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hdsSubscriptionId__c</fullName>
        <label>hdsSubscriptionId</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paymentCode__c</fullName>
        <label>paymentCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationCode__c</fullName>
        <label>publicationCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pubtag__c</fullName>
        <label>pubtag</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rcpnSbn__c</fullName>
        <label>rcpnSbn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rcpn__c</fullName>
        <label>rcpn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientBuildingCode__c</fullName>
        <label>recipientBuildingCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientCompanyName__c</fullName>
        <label>recipientCompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientEmail__c</fullName>
        <label>recipientEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientFaxNumber__c</fullName>
        <label>recipientFaxNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientHandphoneNumber__c</fullName>
        <label>recipientHandphoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientHouseBlockNumber__c</fullName>
        <label>recipientHouseBlockNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientLevel__c</fullName>
        <label>recipientLevel</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientName__c</fullName>
        <label>recipientName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientNric__c</fullName>
        <label>recipientNric</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientOfficeTelephoneExtension__c</fullName>
        <label>recipientOfficeTelephoneExtension</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientOfficeTelephoneNumber__c</fullName>
        <label>recipientOfficeTelephoneNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientPostalCode__c</fullName>
        <label>recipientPostalCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientResidenceTelephoneNumber__c</fullName>
        <label>recipientResidenceTelephoneNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientSalutation__c</fullName>
        <label>recipientSalutation</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientStreetCode__c</fullName>
        <label>recipientStreetCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientUnit__c</fullName>
        <label>recipientUnit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipientUpdateIndicator__c</fullName>
        <label>recipientUpdateIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stopDate__c</fullName>
        <label>stopDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberBuildingCode__c</fullName>
        <label>subscriberBuildingCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberCompanyName__c</fullName>
        <label>subscriberCompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberEmail__c</fullName>
        <label>subscriberEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberFaxNumber__c</fullName>
        <label>subscriberFaxNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberHandphoneNumber__c</fullName>
        <label>subscriberHandphoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberHouseBlockNumber__c</fullName>
        <label>subscriberHouseBlockNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberLevel__c</fullName>
        <label>subscriberLevel</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberName__c</fullName>
        <label>subscriberName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberNric__c</fullName>
        <label>subscriberNric</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberOfficeTelephoneExtension__c</fullName>
        <label>subscriberOfficeTelephoneExtension</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberOfficeTelephoneNumber__c</fullName>
        <label>subscriberOfficeTelephoneNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberPostalCode__c</fullName>
        <label>subscriberPostalCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberResidentTelephoneNumber__c</fullName>
        <label>subscriberResidentTelephoneNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberSalutation__c</fullName>
        <label>subscriberSalutation</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberStreetCode__c</fullName>
        <label>subscriberStreetCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberUnit__c</fullName>
        <label>subscriberUnit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriberUpdateIndicator__c</fullName>
        <label>subscriberUpdateIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriptionCopies__c</fullName>
        <label>subscriptionCopies</label>
        <length>27</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriptionPeriod__c</fullName>
        <label>subscriptionPeriod</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriptionUpdateIndicator__c</fullName>
        <label>subscriptionUpdateIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorGroup__c</fullName>
        <label>vendorGroup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorNumber__c</fullName>
        <label>vendorNumber</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_VSS_ImportVendorSubscription</label>
    <nameField>
        <label>BT_CO_CMIS_POP_NumberOfVendorInserts__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_VSS_ImportVendorSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>